--- a/app/src/main/res/navigation/nav_logged_out.xml
+++ b/app/src/main/res/navigation/nav_logged_out.xml
@@ -13,6 +13,15 @@
         <action
             android:id="@+id/action_signInFragment_to_signUpFragment"
             app:destination="@id/signUpFragment" />
+        <action
+            android:id="@+id/action_signInFragment_to_loggedInHostActivity"
+            app:destination="@id/loggedInHostActivity"
+            />
+
+<!--        app:popUpTo="@id/signInFragment"-->
+<!--        app:popUpToInclusive="true"-->
+
+
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
@@ -23,4 +32,9 @@
             android:id="@+id/action_signUpFragment_to_signInFragment"
             app:destination="@id/signInFragment" />
     </fragment>
+    <activity
+        android:id="@+id/loggedInHostActivity"
+        android:name="com.blogspot.soyamr.notforgotagain.LoggedInHostActivity"
+        android:label="activity_logged_in_host"
+        tools:layout="@layout/activity_logged_in_host" />
 </navigation>
