a better use of nav component, now i have only one

--- a/app/src/main/res/layout/fragment_notes_board.xml
+++ b/app/src/main/res/layout/fragment_notes_board.xml
@@ -6,14 +6,22 @@
     android:layout_height="match_parent"
     tools:context=".NotesBoardFragment">
 
+    <include layout="@layout/toolbar_general"
+        android:id="@+id/toolbarView"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notesRecycler"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:translationY="-4dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarView" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addNoteFloatingActionButton"
@@ -21,6 +29,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginBottom="32dp"
+        android:backgroundTint="@android:color/black"
         android:clickable="true"
         android:src="@drawable/ic_plus"
         app:layout_constraintBottom_toBottomOf="parent"
