--- a/app/src/main/res/drawable/toolbar_shadow.xml
+++ b/app/src/main/res/drawable/toolbar_shadow.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android">
+<shape android:shape="rectangle" xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="90"
-        android:endColor="#FAFAFA"
+        android:endColor="#88333333"
         android:startColor="@android:color/transparent" />
 </shape>
