--- a/app/src/main/res/layout/toolbar_general.xml
+++ b/app/src/main/res/layout/toolbar_general.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools">
 <androidx.appcompat.widget.Toolbar
@@ -12,12 +12,11 @@
     app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light"
     android:layout_width="match_parent"
     android:layout_height="?attr/actionBarSize"
-    android:elevation="4dp"
     tools:title="test title"
     android:theme="@style/ThemeOverlay.MaterialComponents.ActionBar" />
     <View
         android:layout_width="match_parent"
-        android:layout_height="10dp"
+        android:layout_height="4dp"
         android:background="@drawable/toolbar_shadow"
         app:layout_constraintTop_toBottomOf="@id/my_toolbar"
         app:layout_constraintEnd_toEndOf="parent"
