--- a/app/src/main/res/layout/item_note_details.xml
+++ b/app/src/main/res/layout/item_note_details.xml
@@ -2,16 +2,16 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
     android:focusable="true"
     android:layout_margin="16dp"
-    app:cardCornerRadius="8dp"
+    app:cardCornerRadius="15dp"
     android:foreground="?attr/selectableItemBackground">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="@android:color/black"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
         <TextView
@@ -21,6 +21,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
+            app:layout_constrainedWidth="true"
             android:text="TextView"
             android:textColor="@android:color/white"
             android:textStyle="bold"
