--- a/app/src/main/res/navigation/nav_host.xml
+++ b/app/src/main/res/navigation/nav_host.xml
@@ -14,7 +14,7 @@
             android:id="@+id/action_signInFragment_to_signUpFragment"
             app:destination="@id/signUpFragment"
             app:popUpTo="@id/signInFragment"
-            app:popUpToInclusive="true"/>
+            app:popUpToInclusive="true" />
         <action
             android:id="@+id/action_signInFragment_to_notesBoardFragment"
             app:destination="@id/notesBoardFragment"
@@ -36,14 +36,17 @@
         <action
             android:id="@+id/action_signUpFragment_to_signInFragment"
             app:destination="@id/signInFragment"
-            app:popUpToInclusive="true"
-            app:popUpTo="@id/signUpFragment"/>
+            app:popUpTo="@id/signUpFragment"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/notesBoardFragment"
         android:name="com.blogspot.soyamr.notforgotagain.NotesBoardFragment"
         android:label="fragment_notes_board"
         tools:layout="@layout/fragment_notes_board">
+        <action
+            android:id="@+id/action_notesBoardFragment_to_noteDetailsFragment"
+            app:destination="@id/noteDetailsFragment" />
         <action
             android:id="@+id/action_notesBoardFragment_to_addNoteFragment"
             app:destination="@id/addNoteFragment" />
@@ -56,5 +59,28 @@
         <action
             android:id="@+id/action_addNoteFragment_to_notesBoardFragment"
             app:destination="@id/notesBoardFragment" />
+        <action
+            android:id="@+id/action_addNoteFragment_to_datePickerFragment"
+            app:destination="@id/datePickerFragment" />
+        <action
+            android:id="@+id/action_addNoteFragment_to_addCategoryDialogFragment"
+            app:destination="@id/addCategoryDialogFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/noteDetailsFragment"
+        android:name="com.blogspot.soyamr.notforgotagain.NoteDetailsFragment"
+        android:label="fragment_note_details"
+        tools:layout="@layout/fragment_note_details">
+        <action
+            android:id="@+id/action_noteDetailsFragment_to_addNoteFragment"
+            app:destination="@id/addNoteFragment" />
+    </fragment>
+    <dialog
+        android:id="@+id/datePickerFragment"
+        android:name="com.blogspot.soyamr.notforgotagain.DatePickerFragment"
+        android:label="DatePickerFragment" />
+    <dialog
+        android:id="@+id/addCategoryDialogFragment"
+        android:name="com.blogspot.soyamr.notforgotagain.AddCategoryDialogFragment"
+        android:label="AddCategoryDialogFragment" />
 </navigation>
