--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,9 @@
     <color name="textBlue">#1554F6</color>
     <color name="mygrey">#EFEFEF</color>
     <color name="green">#52CC57</color>
+    <color name="descriptionTextColor">#DE000000</color>
+
+
+
 
 </resources>
