--- a/app/src/main/res/navigation/nav_host.xml
+++ b/app/src/main/res/navigation/nav_host.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/signInFragment"
-        android:name="com.blogspot.soyamr.notforgotagain.SignInFragment"
+        android:name="com.blogspot.soyamr.notforgotagain.view.signin.SignInFragment"
         android:label="fragment_sign_in"
         tools:layout="@layout/fragment_sign_in">
         <action
@@ -30,7 +30,7 @@
     </fragment>
     <fragment
         android:id="@+id/signUpFragment"
-        android:name="com.blogspot.soyamr.notforgotagain.SignUpFragment"
+        android:name="com.blogspot.soyamr.notforgotagain.view.signup.SignUpFragment"
         android:label="fragment_sign_up"
         tools:layout="@layout/fragment_sign_up">
         <action
@@ -41,7 +41,7 @@
     </fragment>
     <fragment
         android:id="@+id/notesBoardFragment"
-        android:name="com.blogspot.soyamr.notforgotagain.NotesBoardFragment"
+        android:name="com.blogspot.soyamr.notforgotagain.view.NotesBoardFragment"
         android:label="fragment_notes_board"
         tools:layout="@layout/fragment_notes_board">
         <action
@@ -50,10 +50,18 @@
         <action
             android:id="@+id/action_notesBoardFragment_to_addNoteFragment"
             app:destination="@id/addNoteFragment" />
+        <argument
+            android:name="uId"
+            app:argType="long" />
+        <action
+            android:id="@+id/action_notesBoardFragment_to_signInFragment"
+            app:destination="@id/signInFragment"
+            app:popUpTo="@id/notesBoardFragment"
+            app:popUpToInclusive="true"/>
     </fragment>
     <fragment
         android:id="@+id/addNoteFragment"
-        android:name="com.blogspot.soyamr.notforgotagain.AddNoteFragment"
+        android:name="com.blogspot.soyamr.notforgotagain.view.AddNoteFragment"
         android:label="fragment_add_note"
         tools:layout="@layout/fragment_add_note">
         <action
@@ -68,7 +76,7 @@
     </fragment>
     <fragment
         android:id="@+id/noteDetailsFragment"
-        android:name="com.blogspot.soyamr.notforgotagain.NoteDetailsFragment"
+        android:name="com.blogspot.soyamr.notforgotagain.view.NoteDetailsFragment"
         android:label="fragment_note_details"
         tools:layout="@layout/fragment_note_details">
         <action
@@ -77,10 +85,10 @@
     </fragment>
     <dialog
         android:id="@+id/datePickerFragment"
-        android:name="com.blogspot.soyamr.notforgotagain.DatePickerFragment"
+        android:name="com.blogspot.soyamr.notforgotagain.view.dialogfragments.DatePickerFragment"
         android:label="DatePickerFragment" />
     <dialog
         android:id="@+id/addCategoryDialogFragment"
-        android:name="com.blogspot.soyamr.notforgotagain.AddCategoryDialogFragment"
+        android:name="com.blogspot.soyamr.notforgotagain.view.dialogfragments.AddCategoryDialogFragment"
         android:label="AddCategoryDialogFragment" />
 </navigation>
