--- a/app/src/main/res/navigation/nav_host.xml
+++ b/app/src/main/res/navigation/nav_host.xml
@@ -70,6 +70,10 @@
         <argument
             android:name="uid"
             app:argType="long" />
+        <argument
+            android:name="nid"
+            app:argType="long"
+            android:defaultValue="-1L" />
     </fragment>
     <fragment
         android:id="@+id/noteDetailsFragment"
