--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -5,6 +5,8 @@
 
     <data>
 
+        <import type="android.view.View" />
+
         <variable
             name="viewModel"
             type="com.blogspot.soyamr.notforgotagain.view.signin.SignInViewModel" />
@@ -77,9 +79,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            app:errorText="@{viewModel.passwordErrorMessage}"
             android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
+            app:errorText="@{viewModel.passwordErrorMessage}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/emailTextInputLayout">
@@ -107,6 +109,9 @@
             app:layout_constraintStart_toEndOf="@+id/noAccountTextview"
             app:layout_constraintTop_toTopOf="@+id/noAccountTextview" />
 
-
+        <include
+            android:id="@+id/here_must_be_id_or_no_databinding"
+            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}"
+            layout="@layout/loading_state" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
